scripts/out.txt
  File "E:\APIïżœïżœÈĄïżœïżœïżœïżœ\ïżœÔ¶ïżœïżœïżœïżœïżœïżœïżœŃŽïżœïżœïżœïżœïżœïżœïżœ\01-ïżœïżœïżœïżœVPNŚąïżœïżœïżœ\scripts\dageyun_extract.py", line 227
    after = page.evaluate("() => {
                          ^
SyntaxError: unterminated string literal (detected at line 227)
